manifests/elasticsearch/elasticsearch-exchange.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-elasticsearch
  namespace: elasticsearch
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.mycompany.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kibana-kb-http
              port:
                number: 5601
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-exporter
  namespace: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch-exporter
  template:
    metadata:
      labels:
        app: elasticsearch-exporter
    spec:
      containers:
      - name: exporter
        image: quay.io/prometheuscommunity/elasticsearch-exporter:latest
        args:
          - "--es.uri=https://elasticsearch-es-http:9200" 
          - "--es.ca=/cert/tls.crt" 
        securityContext:
          runAsUser: 1000 
        volumeMounts:
          - name: ca
            readOnly: true 
            mountPath: "/cert/tls.crt"
            subPath: "tls.crt"
        resources:
          requests:
            memory: 64Mi
            cpu: 500m
          limits:
            memory: 128Mi
            cpu: 500m   
        ports:
        - name: metrics
          containerPort: 9114
      volumes:
        - name: ca
          secret:
            secretName: elasticsearch-es-http-ca-internal
            items:
              - key: tls.crt
                path: tls.crt             
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-exporter
  namespace: elasticsearch  
  labels:
    app: elasticsearch-exporter
spec:
  selector:
    app: elasticsearch-exporter
  ports:
  - name: metrics
    protocol: TCP
    port: 9114
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-np
  namespace: elasticsearch
spec:
  type: NodePort
  selector:
    elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
      nodePort: 30811
